--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         button { background: var(--primary); color: white; border: none; padding: 15px; border-radius: 8px; font-size: 1rem; font-weight: 600; cursor: pointer; transition: 0.2s; }
         button:hover { filter: brightness(0.9); }
         
-        /* Updated Share Container: 2 Columns only */
         .share-container { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 15px; }
         .btn-line { background: var(--line); }
         .btn-fb { background: var(--fb); }
@@ -136,7 +135,7 @@
                 { q: "It ___ (rain) a lot in April.", t: "四月常下雨。", a: "rains" },
                 { q: "Birds ___ (not fly) south in the summer.", t: "鳥類在夏天不會飛往南方。", a: "do not fly" }
             ],
-            table: `<table class="rule-table"><tr><th>Subject (主詞)</th><th>Affirmative (肯定)</th><th>Negative (否定)</th></tr><tr><td>I / You / We / They</td><td>Base Verb</td><td>do not + verb</td></tr><tr><td>He / She / It</td><td>verb + s/es</td><td>does not + verb</td></tr></table>`
+            table: `<table class="rule-table"><tr><th>Subject (主詞)</th><th>Affirmative (肯定)</th><th>Negative (否定)</th></tr><tr><td>I / You / We / They</td><td>Base verb</td><td>do not + verb</td></tr><tr><td>He / She / It</td><td>verb + s/es</td><td>does not + verb</td></tr></table>`
         },
         past: {
             title: "Past Simple 過去簡單式",
