--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 
     <div id="rule-card" class="card" style="display:none;">
         <div id="rule-content"></div>
+        <div style="background: #eef4ff; padding: 20px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid var(--primary);">
+            <p><strong>Instructions / 測驗說明:</strong></p>
+            <ul>
+                <li>Read the sentence and fill in the blank. / 閱讀句子並完成填空。</li>
+                <li>Watch out for negative verbs (not). / 注意否定動詞用法。</li>
+                <li>Press Enter to submit. / 按下 Enter 鍵送出答案。</li>
+            </ul>
+        </div>
         <button style="width:100%; background: var(--success); color:white; padding:15px; border:none; border-radius:8px; font-weight:bold; cursor:pointer;" onclick="startQuiz()">Start Quiz / 開始測驗</button>
         <button class="home-btn" onclick="backToMenu()">🏠 Home</button>
     </div>
@@ -111,7 +119,7 @@
             questions: [
                 {q: "I ___ (help) you tomorrow.", a: "will help"},
                 {q: "They ___ (not come) to the party.", a: "will not come"},
-                {q: "She ___ (travel) to London next month.", a: "will travel"},
+                {q: "She ___ (travel) to London.", a: "will travel"},
                 {q: "We ___ (not forget) the keys.", a: "will not forget"},
                 {q: "He ___ (buy) a house next year.", a: "will buy"},
                 {q: "It ___ (be) sunny on Friday.", a: "will be"},
@@ -126,7 +134,7 @@
             questions: [
                 {q: "I ___ (read) a book now.", a: "am reading"},
                 {q: "They ___ (not dance) right now.", a: "are not dancing"},
-                {q: "She ___ (cook) dinner in the kitchen.", a: "is cooking"},
+                {q: "She ___ (cook) dinner.", a: "is cooking"},
                 {q: "It ___ (rain) outside.", a: "is raining"},
                 {q: "We ___ (not watch) a movie.", a: "are not watching"},
                 {q: "You ___ (listen) to music.", a: "are listening"},
@@ -139,8 +147,8 @@
         pastContinuous: {
             title: "Past Continuous 過去進行式",
             questions: [
-                {q: "I ___ (eat) dinner at 7 PM yesterday.", a: "was eating"},
-                {q: "They ___ (not study) when I arrived.", a: "were not studying"},
+                {q: "I ___ (eat) dinner at 7 PM.", a: "was eating"},
+                {q: "They ___ (not study) then.", a: "were not studying"},
                 {q: "She ___ (sleep) when you called.", a: "was sleeping"},
                 {q: "We ___ (walk) in the park.", a: "were walking"},
                 {q: "He ___ (not drive) fast.", a: "was not driving"},
@@ -156,14 +164,14 @@
             questions: [
                 {q: "I ___ (wait) for you at 5 PM.", a: "will be waiting"},
                 {q: "They ___ (not work) at 10 PM.", a: "will not be working"},
-                {q: "She ___ (fly) to Paris this time tomorrow.", a: "will be flying"},
+                {q: "She ___ (fly) to Paris.", a: "will be flying"},
                 {q: "We ___ (have) lunch at noon.", a: "will be having"},
-                {q: "He ___ (not sleep) during the flight.", a: "will not be sleeping"},
-                {q: "You ___ (study) all night tonight.", a: "will be studying"},
-                {q: "It ___ (rain) by the time you arrive.", a: "will be raining"},
+                {q: "He ___ (not sleep) during flight.", a: "will not be sleeping"},
+                {q: "You ___ (study) all night.", a: "will be studying"},
+                {q: "It ___ (rain) later.", a: "will be raining"},
                 {q: "I ___ (not use) the laptop then.", a: "will not be using"},
                 {q: "They ___ (swim) in the ocean.", a: "will be swimming"},
-                {q: "She ___ (wear) a red dress tonight.", a: "will be wearing"}
+                {q: "She ___ (wear) a red dress.", a: "will be wearing"}
             ]
         }
     };
@@ -171,11 +179,9 @@
     function normalize(text) {
         if (!text) return "";
         let s = text.replace(/[‘’]/g, "'").toLowerCase().trim();
-        // Expand common contractions to match the full forms in data
         s = s.replace(/\bdon't\b/g, "do not").replace(/\bdoesn't\b/g, "does not").replace(/\bdidn't\b/g, "did not");
         s = s.replace(/\bwon't\b/g, "will not").replace(/\bisn't\b/g, "is not").replace(/\baren't\b/g, "are not");
         s = s.replace(/\bwasn't\b/g, "was not").replace(/\bweren't\b/g, "were not").replace(/\bi'm\b/g, "i am");
-        s = s.replace(/\bi'll\b/g, "i will").replace(/\bshe's\b/g, "she is").replace(/\bhe's\b/g, "he is");
         return s.replace(/\s+/g, ' ');
     }
 
@@ -196,7 +202,7 @@
 
     function loadTense(tense) {
         currentTense = tense;
-        document.getElementById('rule-content').innerHTML = `<h2>${data[tense].title}</h2><p>Practice both affirmative (+) and negative (-) forms.</p>`;
+        document.getElementById('rule-content').innerHTML = `<h2>${data[tense].title}</h2><p>Practice both affirmative (+) and negative (-) forms.<br>練習肯定句 (+) 與否定句 (-)。</p>`;
         document.getElementById('menu-card').style.display = 'none';
         document.getElementById('rule-card').style.display = 'block';
     }
@@ -213,7 +219,7 @@
             <span class="status-msg">Question ${currentIdx+1} / 10</span>
             <h3 style="text-align:center;">${item.q}</h3>
             <input type="text" id="user-input" autocomplete="off" onkeypress="if(event.key==='Enter') next()">
-            <button style="width:100%; background:var(--primary); color:white; padding:15px; border-radius:8px; border:none; font-weight:bold; cursor:pointer;" onclick="next()">Submit</button>
+            <button style="width:100%; background:var(--primary); color:white; padding:15px; border-radius:8px; border:none; font-weight:bold; cursor:pointer;" onclick="next()">Submit / 送出</button>
         `;
         document.getElementById('user-input').focus();
     }
@@ -222,10 +228,8 @@
         let rawAns = document.getElementById('user-input').value;
         let correctAns = data[currentTense].questions[currentIdx].a;
         let isCorrect = normalize(rawAns) === normalize(correctAns);
-        
         if (isCorrect) score++;
         studentHistory.push({ q: data[currentTense].questions[currentIdx].q, user: rawAns, correct: correctAns, status: isCorrect });
-
         currentIdx++;
         if (currentIdx < 10) showQuestion(); else showResults();
     }
@@ -234,14 +238,9 @@
         document.getElementById('quiz-container').style.display = 'none';
         document.getElementById('results-container').style.display = 'block';
         document.getElementById('score-summary').innerText = studentName + " - " + (score * 10) + "%";
-        
-        let reviewHtml = "<h3>Review Details:</h3>";
+        let reviewHtml = "<h3>Review Details / 錯誤檢討:</h3>";
         studentHistory.forEach(item => {
-            reviewHtml += `<div class="review-item">
-                <strong>${item.q}</strong><br>
-                Your Answer: <span class="${item.status ? 'right' : 'wrong'}">${item.user || "(Empty)"}</span><br>
-                ${!item.status ? 'Correct Answer: <span class="right">' + item.correct + '</span>' : ''}
-            </div>`;
+            reviewHtml += `<div class="review-item"><strong>${item.q}</strong><br>Your Answer: <span class="${item.status ? 'right' : 'wrong'}">${item.user || "(Empty)"}</span><br>${!item.status ? 'Correct Answer: <span class="right">' + item.correct + '</span>' : ''}</div>`;
         });
         document.getElementById('review-list').innerHTML = reviewHtml;
     }
