--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
                 {q: "It ___ (not rain) yesterday.", t: "昨天沒下雨。", a: "did not rain"},
                 {q: "I ___ (find) a wallet.", t: "我發現一個皮夾。", a: "found"},
                 {q: "We ___ (not see) the accident.", t: "我們沒看到事故。", a: "did not see"},
-                {q: "She ___ (lost) her keys.", t: "她弄丟了鑰匙。", a: "lost"},
+                {q: "She ___ (lose) her keys.", t: "她弄丟了鑰匙。", a: "lost"},
                 {q: "He ___ (not tell) me.", t: "他沒告訴我。", a: "did not tell"},
-                {q: "They ___ (won) the game.", t: "他們贏了比賽。", a: "won"},
+                {q: "They ___ (win) the game.", t: "他們贏了比賽。", a: "won"},
                 {q: "You ___ (not sleep) well.", t: "你沒睡好。", a: "did not sleep"},
-                {q: "I ___ (drank) some juice.", t: "我喝了一些果汁。", a: "drank"},
+                {q: "I ___ (drink) some juice.", t: "我喝了一些果汁。", a: "drank"},
                 {q: "We ___ (not leave) late.", t: "我們沒太晚離開。", a: "did not leave"},
-                {q: "It ___ (was) cold.", t: "天氣很冷。", a: "was"},
+                {q: "It ___ (be) cold.", t: "天氣很冷。", a: "was"},
                 {q: "He ___ (not write) a letter.", t: "他沒寫信。", a: "did not write"}
             ]
         },
@@ -237,13 +237,13 @@
                 {q: "She ___ (sleep).", t: "她正在睡覺。", a: "is sleeping"},
                 {q: "We ___ (not wait).", t: "我們沒在等。", a: "are not waiting"},
                 {q: "You ___ (drive).", t: "你正在開車。", a: "are driving"},
-                {q: "He ___ (not listening).", t: "他沒在聽。", a: "is not listening"},
+                {q: "He ___ (not listen).", t: "他沒在聽。", a: "is not listening"},
                 {q: "It ___ (get) dark.", t: "天快黑了。", a: "is getting"},
-                {q: "They ___ (not swimming).", t: "他們沒在游泳。", a: "are not swimming"},
-                {q: "I ___ (writing).", t: "我正在寫字。", a: "am writing"},
-                {q: "She ___ (not singing).", t: "她沒在唱歌。", a: "is not singing"},
-                {q: "We ___ (learning).", t: "我們正在學習。", a: "are learning"},
-                {q: "The cat ___ (running).", t: "貓正在跑。", a: "is running"}
+                {q: "They ___ (not swim).", t: "他們沒在游泳。", a: "are not swimming"},
+                {q: "I ___ (write).", t: "我正在寫字。", a: "am writing"},
+                {q: "She ___ (not sing).", t: "她沒在唱歌。", a: "is not singing"},
+                {q: "We ___ (learn).", t: "我們正在學習。", a: "are learning"},
+                {q: "The cat ___ (run).", t: "貓正在跑。", a: "is running"}
             ]
         },
         pastContinuous: {
@@ -258,19 +258,19 @@
                 {q: "He ___ (not drive).", t: "他那時沒在開車。", a: "was not driving"},
                 {q: "You ___ (sing).", t: "你那時在唱歌。", a: "were singing"},
                 {q: "It ___ (snow) last night.", t: "昨晚那時在下雪。", a: "was snowing"},
-                {q: "I ___ (not feeling) well.", t: "我那時感覺不舒服。", a: "was not feeling"},
-                {q: "They ___ (working) hard.", t: "他們那時在努力工作。", a: "were working"},
-                {q: "The sun ___ (shining).", t: "那時陽光普照。", a: "was shining"},
-                {q: "I ___ (not looking).", t: "我那時沒在看。", a: "was not looking"},
-                {q: "We ___ (having) fun.", t: "我們那時玩得很開心。", a: "were having"},
-                {q: "He ___ (talking) to her.", t: "他那時在跟她說話。", a: "was talking"},
-                {q: "They ___ (not waiting).", t: "他們那時沒在等。", a: "were not waiting"},
-                {q: "She ___ (cleaning).", t: "她那時在打掃。", a: "was cleaning"},
-                {q: "You ___ (not helping).", t: "你那時沒在幫忙。", a: "were not helping"},
-                {q: "It ___ (raining).", t: "那時在下雨。", a: "was raining"},
-                {q: "We ___ (studying).", t: "我們那時在讀書。", a: "were studying"},
-                {q: "He ___ (not wearing) a hat.", t: "他那時沒戴帽子。", a: "was not wearing"},
-                {q: "I ___ (waiting) for you.", t: "我那時在等你。", a: "was waiting"}
+                {q: "I ___ (not feel) well.", t: "我那時感覺不舒服。", a: "was not feeling"},
+                {q: "They ___ (work) hard.", t: "他們那時在努力工作。", a: "were working"},
+                {q: "The sun ___ (shine).", t: "那時陽光普照。", a: "was shining"},
+                {q: "I ___ (not look).", t: "我那時沒在看。", a: "was not looking"},
+                {q: "We ___ (have) fun.", t: "我們那時玩得很開心。", a: "were having"},
+                {q: "He ___ (talk) to her.", t: "他那時在跟她說話。", a: "was talking"},
+                {q: "They ___ (not wait).", t: "他們那時沒在等。", a: "were not waiting"},
+                {q: "She ___ (clean).", t: "她那時在打掃。", a: "was cleaning"},
+                {q: "You ___ (not help).", t: "你那時沒在幫忙。", a: "were not helping"},
+                {q: "It ___ (rain).", t: "那時在下雨。", a: "was raining"},
+                {q: "We ___ (study).", t: "我們那時在讀書。", a: "were studying"},
+                {q: "He ___ (not wear) a hat.", t: "他那時沒戴帽子。", a: "was not wearing"},
+                {q: "I ___ (wait) for you.", t: "我那時在等你。", a: "was waiting"}
             ]
         },
         futureContinuous: {
@@ -288,16 +288,16 @@
                 {q: "I ___ (not use) the laptop.", t: "我到時將不在用筆電。", a: "will not be using"},
                 {q: "They ___ (swim) in the sea.", t: "他們到時將在海裡游泳。", a: "will be swimming"},
                 {q: "She ___ (wear) a red dress.", t: "她到時將穿著紅裙子。", a: "will be wearing"},
-                {q: "I ___ (driving).", t: "我那時會正在開車。", a: "will be driving"},
-                {q: "We ___ (not dancing).", t: "我們那時不會正在跳舞。", a: "will not be dancing"},
-                {q: "He ___ (meeting) her.", t: "他到時會正跟她見面。", a: "will be meeting"},
-                {q: "You ___ (not staying).", t: "你到時不會待在那。", a: "will not be staying"},
-                {q: "They ___ (playing) soccer.", t: "他們到時會正踢足球。", a: "will be playing"},
-                {q: "It ___ (snowing).", t: "那時會正在下雪。", a: "will be snowing"},
-                {q: "I ___ (not crying).", t: "我那時不會正在哭。", a: "will not be crying"},
-                {q: "She ___ (watching) TV.", t: "她到時會正在看電視。", a: "will be watching"},
-                {q: "We ___ (walking) home.", t: "我們那時會正走路回家。", a: "will be walking"},
-                {q: "He ___ (working) hard.", t: "他那時會正在努力工作。", a: "will be working"}
+                {q: "I ___ (drive).", t: "我那時會正在開車。", a: "will be driving"},
+                {q: "We ___ (not dance).", t: "我們那時不會正在跳舞。", a: "will not be dancing"},
+                {q: "He ___ (meet) her.", t: "他到時會正跟她見面。", a: "will be meeting"},
+                {q: "You ___ (not stay).", t: "你到時不會待在那。", a: "will not be staying"},
+                {q: "They ___ (play) soccer.", t: "他們到時會正踢足球。", a: "will be playing"},
+                {q: "It ___ (snow).", t: "那時會正在下雪。", a: "will be snowing"},
+                {q: "I ___ (not cry).", t: "我那時不會正在哭。", a: "will not be crying"},
+                {q: "She ___ (watch) TV.", t: "她到時會正在看電視。", a: "will be watching"},
+                {q: "We ___ (walk) home.", t: "我們那時會正走路回家。", a: "will be walking"},
+                {q: "He ___ (work) hard.", t: "他那時會正在努力工作。", a: "will be working"}
             ]
         }
     };
