--- a/index.html
+++ b/index.html
@@ -111,18 +111,40 @@
 <script>
     var studentName = "", currentTense = "", currentIdx = 0, score = 0, userAnswers = [];
 
-    // Helper to allow contractions like won't = will not
-    function clean(text) {
-        if (!text) return "";
-        return text.toLowerCase().trim()
-            .replace(/n't/g, " not")
-            .replace(/won't/g, "will not")
-            .replace(/'ll/g, " will")
-            .replace(/'m/g, " am")
-            .replace(/'re/g, " are")
-            .replace(/'s/g, " is")
-            .replace(/[.,!?;:]/g, "");
-    }
+// UPDATED CLEAN FUNCTION
+function clean(text) {
+    if (!text) return "";
+    return text.toLowerCase()
+        .replace(/won't/g, "will not")      // Specific check for won't
+        .replace(/n't/g, " not")           // Catches don't, doesn't, isn't
+        .replace(/'ll/g, " will")          // Catches I'll, they'll
+        .replace(/'m/g, " am")
+        .replace(/'re/g, " are")
+        .replace(/'s/g, " is")
+        .replace(/[.,!?;:]/g, "")          // Removes punctuation
+        .replace(/\s+/g, " ")              // Removes double spaces
+        .trim();
+}
+
+function next() {
+    var total = data[currentTense].questions.length;
+    var userInput = document.getElementById('user-input').value;
+    var correctAns = data[currentTense].questions[currentIdx].a;
+    
+    // This line is the magic - it cleans BOTH sides before comparing
+    var isCorrect = clean(userInput) === clean(correctAns);
+
+    userAnswers.push({
+        q: data[currentTense].questions[currentIdx].q,
+        user: userInput,
+        correct: correctAns,
+        isCorrect: isCorrect
+    });
+
+    if (isCorrect) score++;
+    currentIdx++;
+    if (currentIdx < total) showQuestion(); else showResults();
+}
 
     var data = {
         presentSimple: {
