--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
 // UPDATED CLEAN FUNCTION
 function clean(text) {
     if (!text) return "";
-    return text.toLowerCase()
-        .replace(/won't/g, "will not")      // Specific check for won't
-        .replace(/n't/g, " not")           // Catches don't, doesn't, isn't
-        .replace(/'ll/g, " will")          // Catches I'll, they'll
-        .replace(/'m/g, " am")
-        .replace(/'re/g, " are")
-        .replace(/'s/g, " is")
-        .replace(/[.,!?;:]/g, "")          // Removes punctuation
-        .replace(/\s+/g, " ")              // Removes double spaces
-        .trim();
+    return text.toLowerCase().trim()
+        .replace(/[‘’“”]/g, "'")
+        .replace(/won't/g, "will not")
+        .replace(/wasn't/g, "was not")   // Added for Past Continuous
+        .replace(/weren't/g, "were not") // Added for Past Continuous
+        .replace(/n't/g, " not")
+        .replace(/'ll/g, " will")
+        .replace(/'m/g, " am").replace(/'re/g, " are").replace(/'s/g, " is")
+        .replace(/[.,!?;:]/g, "")
+        .replace(/\s+/g, " ");
 }
 
 function next() {
@@ -146,182 +146,78 @@ function next() {
     if (currentIdx < total) showQuestion(); else showResults();
 }
 
-    var data = {
-        presentSimple: {
-            title: "Present Simple 現在簡單式",
-            usage: "Habits and facts. / 習慣與事實。",
-            table: `<table class="rule-table"><tr><th>Subject</th><th>Affirmative (+)</th><th>Negative (-)</th></tr><tr><td>I/You/We/They</td><td>Base verb</td><td>do not + verb</td></tr><tr><td>He/She/It</td><td>verb + s/es</td><td>does not + verb</td></tr></table>`,
-            questions: [
-                {q: "He ___ (drink) milk every day.", t: "他每天喝牛奶。", a: "drinks"},
-                {q: "They ___ (not like) apples.", t: "他們不喜歡蘋果。", a: "do not like"},
-                {q: "She ___ (study) English.", t: "她學習英語。", a: "studies"},
-                {q: "I ___ (not play) soccer.", t: "我不踢足球。", a: "do not play"},
-                {q: "The cat ___ (sleep) a lot.", t: "那隻貓睡得很多。", a: "sleeps"},
-                {q: "Water ___ (boil) at 100°C.", t: "水在100度沸騰。", a: "boils"},
-                {q: "We ___ (not live) here.", t: "我們不住在這裡。", a: "do not live"},
-                {q: "He ___ (wash) his car.", t: "他洗他的車。", a: "washes"},
-                {q: "You ___ (not speak) French.", t: "你不說法語。", a: "do not speak"},
-                {q: "Sun ___ (rise) in the east.", t: "太陽從東方升起。", a: "rises"},
-                {q: "I ___ (eat) breakfast at 7.", t: "我七點吃早餐。", a: "eat"},
-                {q: "She ___ (not have) a car.", t: "她沒有車。", a: "does not have"},
-                {q: "Birds ___ (fly) in the sky.", t: "鳥在天空飛。", a: "fly"},
-                {q: "It ___ (not snow) in summer.", t: "夏天不下雪。", a: "does not snow"},
-                {q: "We ___ (read) books.", t: "我們讀書。", a: "read"},
-                {q: "He ___ (not watch) TV.", t: "他不看電視。", a: "does not watch"},
-                {q: "They ___ (work) in a bank.", t: "他們在銀行工作。", a: "work"},
-                {q: "You ___ (not need) help.", t: "你不需要幫助。", a: "do not need"},
-                {q: "Plants ___ (need) water.", t: "植物需要水。", a: "need"},
-                {q: "I ___ (not know) him.", t: "我不認識他。", a: "do not know"}
-            ]
-        },
-        pastSimple: {
-            title: "Past Simple 過去簡單式",
-            usage: "Completed actions in the past. / 過去完成的動作。",
-            table: `<table class="rule-table"><tr><th>Type</th><th>Structure</th></tr><tr><td>Affirmative (+)</td><td>Verb + ed (or irregular)</td></tr><tr><td>Negative (-)</td><td>did not + base verb</td></tr></table>`,
-            questions: [
-                {q: "I ___ (visit) Japan last year.", t: "我去年去日本。", a: "visited"},
-                {q: "They ___ (not go) to school yesterday.", t: "他們昨天沒去學校。", a: "did not go"},
-                {q: "She ___ (see) a movie last night.", t: "她昨晚看電影。", a: "saw"},
-                {q: "He ___ (not eat) his lunch.", t: "他沒吃午餐。", a: "did not eat"},
-                {q: "We ___ (play) tennis on Sunday.", t: "我們週日打網球。", a: "played"},
-                {q: "The bus ___ (stop) here 5 mins ago.", t: "公車5分鐘前停這。", a: "stopped"},
-                {q: "You ___ (not call) me last night.", t: "你昨晚沒打給我。", a: "did not call"},
-                {q: "I ___ (buy) a new phone.", t: "我買了新手機。", a: "bought"},
-                {q: "They ___ (finish) the homework.", t: "他們完成了作業。", a: "finished"},
-                {q: "It ___ (not rain) yesterday.", t: "昨天沒下雨。", a: "did not rain"},
-                {q: "I ___ (find) a wallet.", t: "我發現一個皮夾。", a: "found"},
-                {q: "We ___ (not see) the accident.", t: "我們沒看到事故。", a: "did not see"},
-                {q: "She ___ (lost) her keys.", t: "她弄丟了鑰匙。", a: "lost"},
-                {q: "He ___ (not tell) me.", t: "他沒告訴我。", a: "did not tell"},
-                {q: "They ___ (won) the game.", t: "他們贏了比賽。", a: "won"},
-                {q: "You ___ (not sleep) well.", t: "你沒睡好。", a: "did not sleep"},
-                {q: "I ___ (drank) some juice.", t: "我喝了一些果汁。", a: "drank"},
-                {q: "We ___ (not leave) late.", t: "我們沒太晚離開。", a: "did not leave"},
-                {q: "It ___ (was) cold.", t: "天氣很冷。", a: "was"},
-                {q: "He ___ (not write) a letter.", t: "他沒寫信。", a: "did not write"}
-            ]
-        },
-        futureSimple: {
-            title: "Future Simple 未來簡單式",
-            usage: "Future plans and predictions. / 未來計劃與預測。",
-            table: `<table class="rule-table"><tr><th>Type</th><th>Structure</th></tr><tr><td>Affirmative (+)</td><td>will + base verb</td></tr><tr><td>Negative (-)</td><td>will not + base verb</td></tr></table>`,
-            questions: [
-                {q: "I ___ (help) you tomorrow.", t: "我明天會幫你。", a: "will help"},
-                {q: "They ___ (not come) to the party.", t: "他們不會來派對。", a: "will not come"},
-                {q: "She ___ (travel) to London.", t: "她會去倫敦旅遊。", a: "will travel"},
-                {q: "We ___ (not forget) the keys.", t: "我們不會忘記鑰匙。", a: "will not forget"},
-                {q: "He ___ (buy) a house.", t: "他會買房子。", a: "will buy"},
-                {q: "It ___ (be) sunny.", t: "天氣會晴朗。", a: "will be"},
-                {q: "You ___ (love) this movie.", t: "你會喜歡這部電影。", a: "will love"},
-                {q: "I ___ (not watch) TV.", t: "我不會看電視。", a: "will not watch"},
-                {q: "They ___ (win) the match.", t: "他們會贏比賽。", a: "will win"},
-                {q: "She ___ (not call) again.", t: "她不會再打來。", a: "will not call"},
-                {q: "I ___ (stay) here.", t: "我會待在這。", a: "will stay"},
-                {q: "He ___ (not fail).", t: "他不會失敗。", a: "will not fail"},
-                {q: "We ___ (meet) later.", t: "我們等下會見面。", a: "will meet"},
-                {q: "You ___ (not regret) it.", t: "你不會後悔。", a: "will not regret"},
-                {q: "They ___ (arrive) soon.", t: "他們快到了。", a: "will arrive"},
-                {q: "It ___ (not rain).", t: "不會下雨。", a: "will not rain"},
-                {q: "She ___ (become) a doctor.", t: "她會成為醫生。", a: "will become"},
-                {q: "I ___ (not tell) anyone.", t: "我不會告訴任何人。", a: "will not tell"},
-                {q: "We ___ (be) late.", t: "我們會遲到。", a: "will be"},
-                {q: "You ___ (win).", t: "你會贏。", a: "will win"}
-            ]
-        },
-        presentContinuous: {
-            title: "Present Continuous 現在進行式",
-            usage: "Actions happening now. / 正在發生的動作。",
-            table: `<table class="rule-table"><tr><th>Subject</th><th>Structure</th></tr><tr><td>I</td><td>am (not) + verb-ing</td></tr><tr><td>He/She/It</td><td>is (not) + verb-ing</td></tr><tr><td>You/We/They</td><td>are (not) + verb-ing</td></tr></table>`,
-            questions: [
-                {q: "I ___ (read) a book now.", t: "我現在正在讀書。", a: "am reading"},
-                {q: "They ___ (not dance) right now.", t: "他們現在沒在跳舞。", a: "are not dancing"},
-                {q: "She ___ (cook) dinner.", t: "她正在煮晚餐。", a: "is cooking"},
-                {q: "It ___ (rain) outside.", t: "外面正在下雨。", a: "is raining"},
-                {q: "We ___ (not watch) TV.", t: "我們沒在看電視。", a: "are not watching"},
-                {q: "You ___ (listen) to music.", t: "你正在聽音樂。", a: "are listening"},
-                {q: "He ___ (not work) today.", t: "他今天沒在工作。", a: "is not working"},
-                {q: "The dog ___ (bark).", t: "那隻狗正在叫。", a: "is barking"},
-                {q: "I ___ (not cry).", t: "我沒在哭。", a: "am not crying"},
-                {q: "They ___ (play) in the park.", t: "他們正在公園玩。", a: "are playing"},
-                {q: "She ___ (sleep).", t: "她正在睡覺。", a: "is sleeping"},
-                {q: "We ___ (not wait).", t: "我們沒在等。", a: "are not waiting"},
-                {q: "You ___ (drive).", t: "你正在開車。", a: "are driving"},
-                {q: "He ___ (not listening).", t: "他沒在聽。", a: "is not listening"},
-                {q: "It ___ (get) dark.", t: "天快黑了。", a: "is getting"},
-                {q: "They ___ (not swimming).", t: "他們沒在游泳。", a: "are not swimming"},
-                {q: "I ___ (writing).", t: "我正在寫字。", a: "am writing"},
-                {q: "She ___ (not singing).", t: "她沒在唱歌。", a: "is not singing"},
-                {q: "We ___ (learning).", t: "我們正在學習。", a: "are learning"},
-                {q: "The cat ___ (running).", t: "貓正在跑。", a: "is running"}
-            ]
-        },
-        pastContinuous: {
-            title: "Past Continuous 過去進行式",
-            usage: "Actions in progress in the past. / 過去正在進行的動作。",
-            table: `<table class="rule-table"><tr><th>Subject</th><th>Structure</th></tr><tr><td>I/He/She/It</td><td>was (not) + verb-ing</td></tr><tr><td>You/We/They</td><td>were (not) + verb-ing</td></tr></table>`,
-            questions: [
-                {q: "I ___ (eat) dinner at 7 PM.", t: "我七點時正在吃晚餐。", a: "was eating"},
-                {q: "They ___ (not study) yesterday.", t: "他們昨天那時沒在學習。", a: "were not studying"},
-                {q: "She ___ (sleep) when I called.", t: "我打電話時她正在睡覺。", a: "was sleeping"},
-                {q: "We ___ (walk) in the rain.", t: "我們那時正在雨中走路。", a: "were walking"},
-                {q: "He ___ (not drive).", t: "他那時沒在開車。", a: "was not driving"},
-                {q: "You ___ (sing).", t: "你那時在唱歌。", a: "were singing"},
-                {q: "It ___ (snow) last night.", t: "昨晚那時在下雪。", a: "was snowing"},
-                {q: "I ___ (not feeling) well.", t: "我那時感覺不舒服。", a: "was not feeling"},
-                {q: "They ___ (working) hard.", t: "他們那時在努力工作。", a: "were working"},
-                {q: "The sun ___ (shining).", t: "那時陽光普照。", a: "was shining"},
-                {q: "I ___ (not looking).", t: "我那時沒在看。", a: "was not looking"},
-                {q: "We ___ (having) fun.", t: "我們那時玩得很開心。", a: "were having"},
-                {q: "He ___ (talking) to her.", t: "他那時在跟她說話。", a: "was talking"},
-                {q: "They ___ (not waiting).", t: "他們那時沒在等。", a: "were not waiting"},
-                {q: "She ___ (cleaning).", t: "她那時在打掃。", a: "was cleaning"},
-                {q: "You ___ (not helping).", t: "你那時沒在幫忙。", a: "were not helping"},
-                {q: "It ___ (raining).", t: "那時在下雨。", a: "was raining"},
-                {q: "We ___ (studying).", t: "我們那時在讀書。", a: "were studying"},
-                {q: "He ___ (not wearing) a hat.", t: "他那時沒戴帽子。", a: "was not wearing"},
-                {q: "I ___ (waiting) for you.", t: "我那時在等你。", a: "was waiting"}
-            ]
-        },
-        futureContinuous: {
-            title: "Future Continuous 未來進行式",
-            usage: "Actions that will be in progress. / 未來某時正在進行的動作。",
-            table: `<table class="rule-table"><tr><th>All Subjects</th><th>Structure</th></tr><tr><td>Affirmative (+)</td><td>will be + verb-ing</td></tr><tr><td>Negative (-)</td><td>will not be + verb-ing</td></tr></table>`,
-            questions: [
-                {q: "I ___ (wait) for you.", t: "我到時會正在等你。", a: "will be waiting"},
-                {q: "They ___ (not work) tomorrow.", t: "他們明天到時將不在工作。", a: "will not be working"},
-                {q: "She ___ (fly) to London.", t: "她到時將正飛往倫敦。", a: "will be flying"},
-                {q: "We ___ (have) lunch.", t: "我們那時會正吃午餐。", a: "will be having"},
-                {q: "He ___ (not sleep).", t: "他到時將不在睡覺。", a: "will not be sleeping"},
-                {q: "You ___ (study) tonight.", t: "你今晚將正在學習。", a: "will be studying"},
-                {q: "It ___ (rain) later.", t: "等下將會正在下雨。", a: "will be raining"},
-                {q: "I ___ (not use) the laptop.", t: "我到時將不在用筆電。", a: "will not be using"},
-                {q: "They ___ (swim) in the sea.", t: "他們到時將在海裡游泳。", a: "will be swimming"},
-                {q: "She ___ (wear) a red dress.", t: "她到時將穿著紅裙子。", a: "will be wearing"},
-                {q: "I ___ (driving).", t: "我那時會正在開車。", a: "will be driving"},
-                {q: "We ___ (not dancing).", t: "我們那時不會正在跳舞。", a: "will not be dancing"},
-                {q: "He ___ (meeting) her.", t: "他到時會正跟她見面。", a: "will be meeting"},
-                {q: "You ___ (not staying).", t: "你到時不會待在那。", a: "will not be staying"},
-                {q: "They ___ (playing) soccer.", t: "他們到時會正踢足球。", a: "will be playing"},
-                {q: "It ___ (snowing).", t: "那時會正在下雪。", a: "will be snowing"},
-                {q: "I ___ (not crying).", t: "我那時不會正在哭。", a: "will not be crying"},
-                {q: "She ___ (watching) TV.", t: "她到時會正在看電視。", a: "will be watching"},
-                {q: "We ___ (walking) home.", t: "我們那時會正走路回家。", a: "will be walking"},
-                {q: "He ___ (working) hard.", t: "他那時會正在努力工作。", a: "will be working"}
-            ]
-        }
-    };
-
-    function toggleModal(show) {
-        if (show) {
-            document.getElementById('modal-body').innerHTML = 
-                `<h2 style="color:var(--primary);">${data[currentTense].title}</h2>` + 
-                `<div class="usage-box">${data[currentTense].usage}</div>` + 
-                data[currentTense].table;
-            document.getElementById('rules-modal').style.display = "block";
-        } else {
-            document.getElementById('rules-modal').style.display = "none";
-        }
+const data = {
+    presentSimple: {
+        title: "Present Simple 現在簡單式",
+        usage: "Habits and facts.",
+        table: `<table class="rule-table"><tr><th>Subject</th><th>Affirmative</th><th>Negative</th></tr><tr><td>I/You/We/They</td><td>Verb</td><td>do not + verb</td></tr><tr><td>He/She/It</td><td>Verb + s/es</td><td>does not + verb</td></tr></table>`,
+        contractions: ["do not → don't", "does not → doesn't"],
+        questions: [/* ... 10 questions ... */]
+    },
+    pastSimple: {
+        title: "Past Simple 過去簡單式",
+        usage: "Actions finished in the past.",
+        table: `<table class="rule-table"><tr><th>All Subjects</th><th>Structure</th></tr><tr><td>Affirmative</td><td>Past Verb</td></tr><tr><td>Negative</td><td>did not + verb</td></tr></table>`,
+        contractions: ["did not → didn't"],
+        questions: [/* ... 10 questions ... */]
+    },
+    futureSimple: {
+        title: "Future Simple 未來簡單式",
+        usage: "Plans and predictions.",
+        table: `<table class="rule-table"><tr><th>All Subjects</th><th>Structure</th></tr><tr><td>Affirmative</td><td>will + verb</td></tr><tr><td>Negative</td><td>will not + verb</td></tr></table>`,
+        contractions: ["will not → won't", "I will → I'll", "they will → they'll"],
+        questions: [/* ... 10 questions ... */]
+    },
+    presentContinuous: {
+        title: "Present Continuous 現在進行式",
+        usage: "Actions happening now.",
+        table: `<table class="rule-table"><tr><th>I</th><td>am + ing</td></tr><tr><td>He/She/It</td><td>is + ing</td></tr><tr><td>You/We/They</td><td>are + ing</td></tr></table>`,
+        contractions: ["am not → 'm not", "is not → isn't", "are not → aren't", "he is → he's", "they are → they're"],
+        questions: [/* ... 10 questions ... */]
+    },
+    pastContinuous: {
+        title: "Past Continuous 過去進行式",
+        usage: "Was happening in the past.",
+        table: `<table class="rule-table"><tr><th>I/He/She/It</th><td>was + ing</td></tr><tr><td>You/We/They</td><td>were + ing</td></tr></table>`,
+        contractions: ["was not → wasn't", "were not → weren't"],
+        questions: [/* ... 10 questions ... */]
+    },
+    futureContinuous: {
+        title: "Future Continuous 未來進行式",
+        usage: "Will be in progress later.",
+        table: `<table class="rule-table"><tr><th>All Subjects</th><td>will be + ing</td></tr></table>`,
+        contractions: ["will not be → won't be", "I will be → I'll be"],
+        questions: [/* ... 10 questions ... */]
     }
+};
+
+function toggleModal(show) {
+    if (show) {
+        const tenseData = data[currentTense];
+        
+        // Build the contraction list HTML
+        let contractionHtml = "";
+        if (tenseData.contractions && tenseData.contractions.length > 0) {
+            contractionHtml = `
+                <div style="margin-top: 20px; padding: 15px; background: #f0f7ff; border: 1px solid #1a73e8; border-radius: 8px;">
+                    <strong style="color: #1a73e8; display: block; margin-bottom: 8px;">✅ Allowed Contractions:</strong>
+                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px; font-size: 0.9rem;">
+                        ${tenseData.contractions.map(c => `<span>• ${c}</span>`).join('')}
+                    </div>
+                </div>`;
+        }
+
+        document.getElementById('modal-body').innerHTML = `
+            <h2 style="color: var(--primary); margin-top: 0;">${tenseData.title}</h2>
+            <p><strong>Usage:</strong> ${tenseData.usage}</p>
+            ${tenseData.table}
+            ${contractionHtml}
+        `;
+        document.getElementById('rules-modal').style.display = "block";
+    } else {
+        document.getElementById('rules-modal').style.display = "none";
+    }
+}
 
     function goToMenu() {
         var input = document.getElementById('student-name');
